log
Mon Mar 15 02:39:40 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:4: error: ‘C’ undeclared (first use in this function)
   *C = a + b;
    ^
exercises.c:15:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
Mon Mar 15 02:39:48 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 10/70
e8b0cf8
Mon Mar 15 02:44:57 UTC 2021: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 20/70
39c5684
Mon Mar 15 03:04:51 UTC 2021: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
0d54a2a
Mon Mar 15 03:15:02 UTC 2021: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
62a360f
Mon Mar 15 03:34:40 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 40/70
6f01f50
